--- a/www/MODEOUTLED/Web.config
+++ b/www/MODEOUTLED/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="Entities11" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=43.224.33.132,6789;initial catalog=m-kids;persist security info=True;user id=dev;password=bs@123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=43.224.33.132,6789;initial catalog=m-kids;persist security info=True;user id=dev;password=bs@123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
